For screens up to 500px wide, allow volume control to be full width, for others max width is 450px. This is to prevent scenario where there is a tiny (e.g. 5px) gap on the side.

--- a/MaterialSkin/HTML/material/html/css/mobile.css
+++ b/MaterialSkin/HTML/material/html/css/mobile.css
@@ -246,6 +246,11 @@
  z-index:2;
 }
 
+@media only screen and (max-width:500px) {
+.vol-sheet {
+ max-width:100vw;
+}
+
 .vol-sheet .v-card__actions {
  margin-top:-16px;
 }
